// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleButton should handle danger type 1`] = `
<div>
  <button
    class="c5-ripple-button"
    style="background-color: rgb(232, 187, 37);"
  >
    Click Me
    <span
      class="ripple-button-circle"
    />
  </button>
</div>
`;

exports[`RippleButton should handle error type 1`] = `
<div>
  <button
    class="c5-ripple-button"
    style="background-color: red; color: rgb(255, 255, 255);"
  >
    Click Me
    <span
      class="ripple-button-circle"
    />
  </button>
</div>
`;

exports[`RippleButton should handle green type 1`] = `
<div>
  <button
    class="c5-ripple-button"
    style="background-color: limegreen; color: rgb(255, 255, 255);"
  >
    Click Me
    <span
      class="ripple-button-circle"
    />
  </button>
</div>
`;

exports[`RippleButton should handle info type 1`] = `
<div>
  <button
    class="c5-ripple-button"
    style="background-color: rgb(90, 149, 205); color: rgb(255, 255, 255);"
  >
    Click Me
    <span
      class="ripple-button-circle"
    />
  </button>
</div>
`;

exports[`RippleButton should handle purple type 1`] = `
<div>
  <button
    class="c5-ripple-button"
    style="background-color: rgb(186, 30, 186); color: rgb(255, 255, 255);"
  >
    Click Me
    <span
      class="ripple-button-circle"
    />
  </button>
</div>
`;

exports[`RippleButton should handle success type 1`] = `
<div>
  <button
    class="c5-ripple-button"
    style="background-color: rgb(27, 204, 74); color: rgb(255, 255, 255);"
  >
    Click Me
    <span
      class="ripple-button-circle"
    />
  </button>
</div>
`;

exports[`RippleButton should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="c5-ripple-button"
        style="background-color: rgb(41, 82, 227); color: rgb(255, 255, 255);"
      >
        Click Me
        <span
          class="ripple-button-circle"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="c5-ripple-button"
      style="background-color: rgb(41, 82, 227); color: rgb(255, 255, 255);"
    >
      Click Me
      <span
        class="ripple-button-circle"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
